<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.luis.espol.miscontactos.CrearContactoFragment">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:hint="@string/txtContacto"
                android:id="@+id/txtContacto"
                android:layout_marginTop="15dp"
                android:layout_gravity="top|center_horizontal" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="130dp"
                android:id="@+id/imgViewContacto"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:maxWidth="120dp"
                android:maxHeight="120dp"
                android:scaleType="fitCenter"
                android:src="@drawable/usuario"
                android:contentDescription="@string/contenido_descripcion"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/cmpNombre"
                android:layout_marginTop="33dp"
                android:hint="@string/nombre_de_contacto" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/cmpTelefono"
                android:hint="@string/txtTelefono" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/cmpEmail"
                android:hint="@string/txtEmail"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cmpDireccion"
                android:hint="@string/txtDireccion" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agrega_contacto"
                android:id="@+id/btnAgregar"
                android:layout_marginBottom="109dp"
                android:enabled="false"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

</ScrollView>