<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.luis.espol.miscontactos.MainActivity">
    <item
        android:id="@+id/action_llamar_contacto"
        android:icon="@drawable/ic_llamar_contacto"
        android:title="@string/action_llamar_contacto"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_eliminar_contacto"
        android:icon="@drawable/ic_eliminar_contacto"
        android:title="@string/action_eliminar_contacto"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>