<?xml version="1.0" encoding="utf-8"?>
<com.luis.espol.miscontactos.util.CheckableRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:id="@+id/imgViewContacto"
        android:src="@drawable/usuario"
        android:contentDescription="@string/imagen_de_usuario"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:focusable="false"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_toRightOf="@+id/imgViewContacto"
        android:layout_toLeftOf="@+id/checkbox"
        android:layout_toStartOf="@+id/checkbox"
        android:layout_toEndOf="@+id/imgViewContacto">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/nombre_del_contacto"
            android:id="@+id/viewNombre"
            android:layout_marginTop="10dp"
            android:focusable="false"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/telefono"
            android:id="@+id/viewTelefono"
            android:focusable="false"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/email"
            android:id="@+id/viewEmail"
            android:focusable="false"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/direccion"
            android:id="@+id/viewDireccion"
            android:focusable="false"/>
    </LinearLayout>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@id/imgViewContacto"
        android:clickable="false"
        android:focusable="false"/>


</com.luis.espol.miscontactos.util.CheckableRelativeLayout>